[gd_scene load_steps=22 format=2]

[ext_resource path="res://Menu/Craft/Craft.gd" type="Script" id=1]
[ext_resource path="res://UI/NPR_1.png" type="Texture" id=2]
[ext_resource path="res://UI/PanelDisabled.tres" type="StyleBox" id=3]
[ext_resource path="res://UI/NPR_2.png" type="Texture" id=4]
[ext_resource path="res://UI/Font_Large.tres" type="DynamicFont" id=5]
[ext_resource path="res://UI/X.png" type="Texture" id=6]
[ext_resource path="res://UI/Panel.tres" type="StyleBox" id=7]
[ext_resource path="res://Items/X.png" type="Texture" id=8]
[ext_resource path="res://Menu/Craft/Tab.gd" type="Script" id=9]
[ext_resource path="res://UI/YesPanel.tres" type="StyleBox" id=10]
[ext_resource path="res://UI/NoPanel.tres" type="StyleBox" id=11]
[ext_resource path="res://UI/Font_Normal.tres" type="DynamicFont" id=13]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.277344, 0.277344, 0.277344, 1 )
border_color = Color( 0.207843, 0.207843, 0.207843, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.277344, 0.277344, 0.277344, 1 )
border_color = Color( 0.207843, 0.207843, 0.207843, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.207843, 0.207843, 0.207843, 1 )
border_color = Color( 0.133333, 0.133333, 0.133333, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxTexture" id=5]

[sub_resource type="StyleBoxTexture" id=6]

[sub_resource type="Theme" id=7]
default_font = ExtResource( 13 )
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/styles/disabled = ExtResource( 3 )
Button/styles/focus = null
Button/styles/hover = SubResource( 9 )
Button/styles/normal = SubResource( 10 )
Button/styles/pressed = SubResource( 8 )
HScrollBar/styles/scroll = SubResource( 5 )
VScrollBar/styles/scroll = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0.12549, 0.12549, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.211765, 0.0980392, 0.0980392, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.662745, 0.662745, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 1
expand_margin_left = 16.0
expand_margin_right = 16.0
expand_margin_top = 8.0
expand_margin_bottom = 8.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.0980392, 0.2, 0.211765, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 1
expand_margin_left = 16.0
expand_margin_right = 16.0
expand_margin_top = 8.0
expand_margin_bottom = 8.0
anti_aliasing = false

[node name="Craft" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="M1" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="NinePatchRect" parent="M1"]
margin_left = 100.0
margin_top = 100.0
margin_right = 1180.0
margin_bottom = 180.0
size_flags_vertical = 0
texture = ExtResource( 2 )
patch_margin_left = 16
patch_margin_top = 20
patch_margin_right = 16
patch_margin_bottom = 60

[node name="M2" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 7 )
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="NinePatchRect" parent="M2"]
margin_left = 100.0
margin_top = 100.0
margin_right = 1180.0
margin_bottom = 620.0
texture = ExtResource( 4 )
patch_margin_left = 16
patch_margin_top = 32
patch_margin_right = 16
patch_margin_bottom = 16

[node name="M" type="MarginContainer" parent="M2/BG"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VB" type="VBoxContainer" parent="M2/BG/M"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1030.0
margin_bottom = 470.0

[node name="Title" type="HBoxContainer" parent="M2/BG/M/VB"]
margin_right = 980.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
custom_constants/separation = 16

[node name="Button" type="Button" parent="M2/BG/M/VB/Title"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 0 )
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
icon = ExtResource( 6 )
expand_icon = true

[node name="Label" type="Label" parent="M2/BG/M/VB/Title"]
margin_left = 64.0
margin_top = 4.0
margin_right = 155.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 5 )
text = "CRAFT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tab" type="HBoxContainer" parent="M2/BG/M/VB"]
margin_top = 52.0
margin_right = 980.0
margin_bottom = 420.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 32
alignment = 2
script = ExtResource( 9 )

[node name="List" type="HBoxContainer" parent="M2/BG/M/VB/Tab"]
margin_left = 520.0
margin_right = 520.0
margin_bottom = 368.0
size_flags_horizontal = 10
size_flags_vertical = 3
custom_constants/separation = 16

[node name="Primer" type="VBoxContainer" parent="M2/BG/M/VB/Tab/List"]
size_flags_horizontal = 10
size_flags_vertical = 0
custom_constants/separation = 16

[node name="0" type="Button" parent="M2/BG/M/VB/Tab/List/Primer"]
visible = false
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
focus_mode = 0
size_flags_horizontal = 6
size_flags_vertical = 6
toggle_mode = true
shortcut_in_tooltip = false
enabled_focus_mode = 0
icon = ExtResource( 8 )
expand_icon = true

[node name="1" type="Button" parent="M2/BG/M/VB/Tab/List/Primer"]
visible = false
margin_top = 80.0
margin_right = 64.0
margin_bottom = 144.0
rect_min_size = Vector2( 64, 64 )
focus_mode = 0
size_flags_horizontal = 6
size_flags_vertical = 6
toggle_mode = true
shortcut_in_tooltip = false
enabled_focus_mode = 0
icon = ExtResource( 8 )
expand_icon = true

[node name="2" type="Button" parent="M2/BG/M/VB/Tab/List/Primer"]
visible = false
margin_top = 160.0
margin_right = 64.0
margin_bottom = 224.0
rect_min_size = Vector2( 64, 64 )
focus_mode = 0
size_flags_horizontal = 6
size_flags_vertical = 6
toggle_mode = true
shortcut_in_tooltip = false
enabled_focus_mode = 0
icon = ExtResource( 8 )
expand_icon = true

[node name="3" type="Button" parent="M2/BG/M/VB/Tab/List/Primer"]
visible = false
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
focus_mode = 0
size_flags_horizontal = 6
size_flags_vertical = 6
toggle_mode = true
shortcut_in_tooltip = false
enabled_focus_mode = 0
icon = ExtResource( 8 )
expand_icon = true

[node name="Sekunder" type="VBoxContainer" parent="M2/BG/M/VB/Tab/List"]
visible = false
margin_left = 16.0
margin_right = 16.0
size_flags_horizontal = 10
size_flags_vertical = 0
custom_constants/separation = 16

[node name="Panel" type="VBoxContainer" parent="M2/BG/M/VB/Tab"]
margin_left = 552.0
margin_right = 980.0
margin_bottom = 368.0
rect_min_size = Vector2( 428, 0 )
size_flags_horizontal = 8
size_flags_vertical = 3

[node name="Label" type="Label" parent="M2/BG/M/VB/Tab/Panel"]
margin_right = 428.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
size_flags_vertical = 0
custom_styles/normal = ExtResource( 7 )
align = 1
valign = 1

[node name="ReqItem" type="PanelContainer" parent="M2/BG/M/VB/Tab/Panel"]
margin_top = 52.0
margin_right = 428.0
margin_bottom = 316.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 7 )

[node name="SlotGrid" type="HBoxContainer" parent="M2/BG/M/VB/Tab/Panel/ReqItem"]
margin_left = 4.0
margin_top = 4.0
margin_right = 424.0
margin_bottom = 260.0

[node name="CraftButton" type="Button" parent="M2/BG/M/VB/Tab/Panel"]
margin_top = 320.0
margin_right = 428.0
margin_bottom = 368.0
rect_min_size = Vector2( 0, 48 )
focus_mode = 0
size_flags_vertical = 0
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = SubResource( 13 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 10 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "CRAFT"

[node name="Tween" type="Tween" parent="M2/BG/M/VB/Tab"]

[node name="UnCrafted" type="Label" parent="M2/BG/M"]
visible = false
margin_left = 447.0
margin_top = 244.0
margin_right = 633.0
margin_bottom = 276.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 6
size_flags_vertical = 6
custom_colors/font_color = Color( 1, 0.662745, 0.662745, 1 )
custom_styles/normal = SubResource( 11 )
text = "Not Enough Money!"
align = 1
valign = 1

[node name="Crafted" type="Label" parent="M2/BG/M"]
visible = false
margin_left = 496.0
margin_top = 244.0
margin_right = 584.0
margin_bottom = 276.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 6
size_flags_vertical = 6
custom_colors/font_color = Color( 0.666667, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 12 )
text = "Crafted!"
align = 1
valign = 1

[connection signal="pressed" from="M2/BG/M/VB/Title/Button" to="." method="_on_Button_pressed"]
